k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tony-erp
  labels:
    name: tony-erp
    app: erp-system
